# vecinita-data-management

./: .gitignore  .gitmodules  Dockerfile  README.md
.github/workflows/: ci.yml  deploy.yml
apps/backend/: README.md  pyproject.toml
apps/backend/embedding-service/: .env.example  README.md  pyproject.toml
apps/backend/embedding-service/src/: main.py
apps/backend/model-service/: .env.example  README.md  pyproject.toml
apps/backend/model-service/src/: main.py
apps/backend/proxy/: .env.example  README.md  pyproject.toml
apps/backend/proxy/src/: main.py
apps/backend/scraper-service/: .env.example  README.md  pyproject.toml
apps/backend/scraper-service/src/: main.py
apps/backend/vecinita_dm_api/: __init__.py  app.py  corpus_conflict.py  corpus_db_guard.py
apps/backend/vecinita_dm_api/routers/: __init__.py  health.py  ingest.py  jobs_proxy.py  responses.py
apps/frontend/: .env.example  README.md  package.json
docs/: architecture.md  contributing.md  modal-migration-inventory.md
infra/: docker-compose.yml
infra/docker/: embedding.Dockerfile  frontend.Dockerfile  model-service.Dockerfile  model.Dockerfile  proxy.Dockerfile  scraper.Dockerfile
infra/k8s/: README.md
scripts/: README.md
tests/: conftest.py  test_dm_api_app.py  test_dm_api_jobs_proxy_forwarding_contract.py  test_dm_api_modal_rpc_contract.py
tests/pact/: dm_api_jobs_proxy_scraper_consumer_pact.py  test_dm_frontend_provider_verify.py
tests/parity/: test_remote_clients_parity.py
