[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vecinita-dm-api"
version = "0.1.0"
description = "FastAPI data-management API (scraper job proxy + ingest helpers)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "httpx>=0.27",
    "pydantic>=2.6",
    "pydantic-settings>=2.0",
    "modal>=1.3.5",
]

[tool.hatch.build.targets.wheel]
packages = ["vecinita_dm_api"]

[tool.ruff]
line-length = 100
