[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vecinita-scraper-service"
version = "0.1.0"
description = "Data collection and orchestration service for the Vecinita platform"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "httpx>=0.27.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "shared-schemas",
    "service-clients",
    "shared-config",
    "shared-logging",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "respx>=0.21.0",
    "ruff>=0.3.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
